--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "./node_modules/@po-ui/style/css/po-theme-default.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
