--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@po-ui/ng-components": "^16.9.0",
     "@po-ui/ng-templates": "^16.9.0",
     "bootstrap": "^5.3.2",
+    "or": "^0.2.0",
+    "primeng": "^17.14.1",
     "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
+    "with": "^7.0.2",
     "zone.js": "^0.13.1"
   },
   "devDependencies": {
